--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-04-01  Topia  <topia@clovery.jp>
+
+	* module/Client/Cache.pm:
+	  - single-server-mode 時の不具合をいろいろ修正。
+	  - mode/who に共通な一部のコードを関数リファレンスの形でまとめた。
+
 2004-04-01  phonohawk  <phonohawk@ps.sakura.ne.jp>
 
 	* tiarra:
@@ -1531,7 +1537,7 @@
 
 	* これ以前のログは書いていません。
 
-#       Id: $Id: ChangeLog,v 1.142 2004/04/01 03:18:29 admin Exp $
-#   Author: $Author: admin $
-#     Date: $Date: 2004/04/01 03:18:29 $
-# Revision: $Revision: 1.142 $
+#       Id: $Id: ChangeLog,v 1.143 2004/04/01 09:44:41 topia Exp $
+#   Author: $Author: topia $
+#     Date: $Date: 2004/04/01 09:44:41 $
+# Revision: $Revision: 1.143 $
