--- a/HACKING
+++ b/HACKING
@@ -66,6 +66,12 @@ module/Skelton.pm にモジュールのスケルトンがありますので、
     + 情報取得系
       * server_hops		自分のつながっている server と、あるサーバの hop 数の対応を
 				(情報が得られたときに)記録しています。
+      * isupport		RPL_ISUPPORT が送ってくる情報を記録しています。
+				RPL_ISUPPORT の詳細は http://www.irc.org/tech_docs/005.html 等を
+				参照してください。
+				対応していないサーバでは remark は存在しません。
+      * uid			RPL_YOURID が送ってくる情報を記録しています。
+				対応していないサーバでは remark は存在しません。
   - IRCMessage
     + 情報取得系
       * affected-channels	NICK や QUIT などの全チャンネルに波及するメッセージのときに
