--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-06-09  Topia  <topia@clovery.jp>
+
+	* main/IrcIO/Server.pm:
+	(_receive_while_logging_in):
+	  - PING に対応した。
+	  - RPL_WELCOME / NOTICE / PRIVMSG 以外で無視することになった場合、
+	    警告を出す。
+
 2004-06-04  Topia  <topia@clovery.jp>
 
 	* main/IRCMessage.pm:
@@ -1689,7 +1697,7 @@
 
 	* これ以前のログは書いていません。
 
-#       Id: $Id: ChangeLog,v 1.152 2004/06/04 12:57:30 topia Exp $
+#       Id: $Id: ChangeLog,v 1.153 2004/06/09 09:27:37 topia Exp $
 #   Author: $Author: topia $
-#     Date: $Date: 2004/06/04 12:57:30 $
-# Revision: $Revision: 1.152 $
+#     Date: $Date: 2004/06/09 09:27:37 $
+# Revision: $Revision: 1.153 $
